# rust-blog-with-login

./: .gitignore  Dockerfile  README.md
source/: .env.test  Cargo.toml
source/migrations/2021-06-11-105320_create_users/: up.sql
source/migrations/2021-06-12-023552_create_posts/: up.sql
source/src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs  views.rs
source/src/models/: mod.rs  post.rs  session.rs  user.rs
source/src/views/: post.rs  user.rs
source/static/css/: navbar-top-fixed.css
source/templates/: create_post.html  footer.html  header.html  index.html  login.html  post.html
