[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
actix-web = "3"
serde = "1.0.126"
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4.0"
actix-files = "0.5.0"
tera = "1.10.0"