[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.11", features = ["serde"] }
pwhash = "1"
dotenv = "0.15.0"
actix = "0.12.0"
actix-rt = "2.2.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-identity = "0.3.1"
futures = "0.3.15"
serde = "1.0.126"
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4.0"
tera = "1.10.0"